--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -32,6 +32,10 @@ jobs:
         run: |
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      # Instalar dotenv
+      - name: Install dotenv
+        run: pip install python-dotenv
+
       # Rodar o script Python
       - name: Run script
         run: python main.py
