--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ beautifulsoup4==4.12.3
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
-dotenv=1.0.1
+dotenv==1.0.1
 frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
