--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -23,9 +23,10 @@ jobs:
       # Adicionar variáveis de ambiente a partir dos secrets
       - name: Setup environment variables
         run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
+          echo "DB_SERVER=${{ secrets.DB_SERVER }}" >> $GITHUB_ENV
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
           echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-          echo "DB_PASS=${{ secrets.DB_PASS }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
 
       # Instalar dependências, se houver
       - name: Install dependencies
