--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Instalar o driver ODBC para SQL Server
+      - name: Install ODBC Driver for SQL Server
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl apt-transport-https
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17
+
       # Configurar o Python
       - name: Set up Python
         uses: actions/setup-python@v4
