--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,15 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Instalar o driver ODBC para SQL Server
+      # Instalar o driver ODBC para SQL Server e dependências adicionais
       - name: Install ODBC Driver for SQL Server
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl apt-transport-https
+          sudo apt-get install -y curl apt-transport-https unixodbc-dev
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
           curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
           sudo apt-get update
-          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17 mssql-tools
+          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
+          source ~/.bashrc
 
       # Configurar o Python
       - name: Set up Python
