--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Rodar a cada hora
     - cron: '0 * * * *'
+  workflow_dispatch:  # Permite execução manual
 
 jobs:
   run-script:
