--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -23,9 +23,21 @@ jobs:
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
           curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
           sudo apt-get update
-          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17 mssql-tools
-          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
-          source ~/.bashrc
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17
+          sudo apt-get install -y mssql-tools
+
+      # Configurar ODBC
+      - name: Configure ODBC
+        run: |
+          echo "[ODBC Driver 17 for SQL Server]" | sudo tee -a /etc/odbcinst.ini
+          echo "Description=Microsoft ODBC Driver 17 for SQL Server" | sudo tee -a /etc/odbcinst.ini
+          echo "Driver=/opt/microsoft/msodbcsql17/lib64/libmsodbcsql-17.10.so.1.1" | sudo tee -a /etc/odbcinst.ini
+
+      # Verificar drivers ODBC instalados
+      - name: Check ODBC drivers
+        run: |
+          odbcinst -q -d -n "ODBC Driver 17 for SQL Server"
+          odbcinst -q -d
 
       # Configurar o Python
       - name: Set up Python
