--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           echo "[ODBC Driver 17 for SQL Server]" | sudo tee -a /etc/odbcinst.ini
           echo "Description=Microsoft ODBC Driver 17 for SQL Server" | sudo tee -a /etc/odbcinst.ini
-          echo "Driver=/opt/microsoft/msodbcsql17/lib64/libmsodbcsql-17.10.so.1.1" | sudo tee -a /etc/odbcinst.ini
+          echo "Driver=$(sudo find /opt/microsoft/msodbcsql17 -name 'libmsodbcsql*.so')" | sudo tee -a /etc/odbcinst.ini
 
       # Verificar drivers ODBC instalados
       - name: Check ODBC drivers
